// Autogenerated with StateSmith 0.19.0+b5719011215d41a81572ed347c02b22db5d1a48f.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#pragma once  // You can also specify normal include guard. See https://github.com/StateSmith/StateSmith/blob/main/docs/settings.md
#include <stdint.h>

// Generated state machine
class MyFsm
{
public:
    enum class EventId: uint8_t
    {
        DO = 0, // The `do` event is special. State event handlers do not consume this event (ancestors all get it too) unless a transition occurs.
        EVENT1 = 1,
        EVENT2 = 2,
        EVENT3 = 3,
    };
    
    enum
    {
        EventIdCount = 4
    };
    
    enum class StateId: uint8_t
    {
        ROOT = 0,
        STATE1 = 1,
        STATE2 = 2,
        STATE3 = 3,
        STATE3A = 4,
        STATE3B = 5,
        TERMINAL = 6,
    };
    
    enum
    {
        StateIdCount = 7
    };
    
    // Used internally by state machine. Feel free to inspect, but don't modify.
    StateId stateId;
    
    // State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
    MyFsm()
    {
    }
    
    // Starts the state machine. Must be called before dispatching events. Not thread safe.
    void start();
    
    // Dispatches an event to the state machine. Not thread safe.
    // Note! This function assumes that the `eventId` parameter is valid.
    void dispatchEvent(EventId eventId);
    
    // Thread safe.
    static char const * stateIdToString(StateId id);
    
    // Thread safe.
    static char const * eventIdToString(EventId id);


// ################################### PRIVATE MEMBERS ###################################
private:
    
    // This function is used when StateSmith doesn't know what the active leaf state is at
    // compile time due to sub states or when multiple states need to be exited.
    void exitUpToStateHandler(StateId desiredState);
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ROOT
    ////////////////////////////////////////////////////////////////////////////////
    
    void ROOT_enter();
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state STATE1
    ////////////////////////////////////////////////////////////////////////////////
    
    void STATE1_enter();
    
    void STATE1_exit();
    
    void STATE1_event1();
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state STATE2
    ////////////////////////////////////////////////////////////////////////////////
    
    void STATE2_enter();
    
    void STATE2_exit();
    
    void STATE2_do();
    
    void STATE2_event2();
    
    void STATE2_event3();
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state STATE3
    ////////////////////////////////////////////////////////////////////////////////
    
    void STATE3_enter();
    
    void STATE3_exit();
    
    void STATE3_event3();
    
    void State3_InitialState_transition();
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state STATE3A
    ////////////////////////////////////////////////////////////////////////////////
    
    void STATE3A_enter();
    
    void STATE3A_exit();
    
    void STATE3A_event1();
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state STATE3B
    ////////////////////////////////////////////////////////////////////////////////
    
    void STATE3B_enter();
    
    void STATE3B_exit();
    
    void STATE3B_event2();
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state TERMINAL
    ////////////////////////////////////////////////////////////////////////////////
    
    void TERMINAL_enter();
    
    void TERMINAL_exit();
};
